--- a/mohua/css/verify.css
+++ b/mohua/css/verify.css
@@ -6,12 +6,12 @@
 }
 
 body {
-
-  font-family: 'Brush Script MT', cursive;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+	font-family: 'Segoe UI', sans-serif;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	background-color: #f5f5f5;
 }
 
 .container {
@@ -26,138 +26,134 @@ body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	gap: 20px; /* Add spacing between items */
+	gap: 20px;
 }
 
+.checkbox-wrapper-26 * {
+	-webkit-tap-highlight-color: transparent;
+	outline: none;
+}
 
-  .checkbox-wrapper-26 * {
-    -webkit-tap-highlight-color: transparent;
-    outline: none;
-  }
+.checkbox-wrapper-26 input[type="checkbox"] {
+	display: none;
+}
 
-  .checkbox-wrapper-26 input[type="checkbox"] {
-    display: none;
-  }
+.checkbox-wrapper-26 label {
+	--size: 50px;
+	--shadow: calc(var(--size) * .07) calc(var(--size) * .1);
+	position: relative;
+	display: block;
+	width: var(--size);
+	height: var(--size);
+	margin: 0 auto;
+	background-color: red;
+	border-radius: 50%;
+	box-shadow: 0 var(--shadow) brown;
+	cursor: pointer;
+	transition: 0.2s ease transform, 0.2s ease background-color, 0.2s ease box-shadow;
+	overflow: hidden;
+	z-index: 1;
+}
 
-  .checkbox-wrapper-26 label {
-    --size: 50px;
-    --shadow: calc(var(--size) * .07) calc(var(--size) * .1);
-    bottom: 20px;
-    position: relative;
-    display: block;
-    width: var(--size);
-    height: var(--size);
-    margin: 0 auto;
-    background-color: red;
-    border-radius: 50%;
-    box-shadow: 0 var(--shadow) brown;
-    cursor: pointer;
-    transition: 0.2s ease transform, 0.2s ease background-color,
-      0.2s ease box-shadow;
-    overflow: hidden;
-    z-index: 1;
-  }
+.checkbox-wrapper-26 label:before {
+	content: "";
+	position: absolute;
+	top: 50%;
+	right: 0;
+	left: 0;
+	width: calc(var(--size) * .7);
+	height: calc(var(--size) * .7);
+	margin: 0 auto;
+	background-color: #fff;
+	transform: translateY(-50%);
+	border-radius: 50%;
+	box-shadow: inset 0 var(--shadow) white;
+	transition: 0.2s ease width, 0.2s ease height;
+}
 
-  .checkbox-wrapper-26 label:before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: 0;
-    left: 0;
-    width: calc(var(--size) * .7);
-    height: calc(var(--size) * .7);
-    margin: 0 auto;
-    background-color: #fff;
-    transform: translateY(-50%);
-    border-radius: 50%;
-    box-shadow: inset 0 var(--shadow) white;
-    transition: 0.2s ease width, 0.2s ease height;
-  }
+.checkbox-wrapper-26 label:hover:before {
+	width: calc(var(--size) * .55);
+	height: calc(var(--size) * .55);
+	box-shadow: inset 0 var(--shadow) white;
+}
 
-  .checkbox-wrapper-26 label:hover:before {
-    width: calc(var(--size) * .55);
-    height: calc(var(--size) * .55);
-    box-shadow: inset 0 var(--shadow) white;
-  }
+.checkbox-wrapper-26 label:active {
+	transform: scale(0.9);
+}
 
-  .checkbox-wrapper-26 label:active {
-    transform: scale(0.9);
-  }
+.checkbox-wrapper-26 .tick_mark {
+	position: absolute;
+	top: -1px;
+	left: calc(var(--size) * -.05);
+	width: calc(var(--size) * .6);
+	height: calc(var(--size) * .6);
+	margin-left: calc(var(--size) * .14);
+	transform: rotateZ(-40deg);
+}
 
-  .checkbox-wrapper-26 .tick_mark {
-    position: absolute;
-    top: -1px;
-    right: 0;
-    left: calc(var(--size) * -.05);
-    width: calc(var(--size) * .6);
-    height: calc(var(--size) * .6);
-    margin: 0 auto;
-    margin-left: calc(var(--size) * .14);
-    transform: rotateZ(-40deg);
-  }
+.checkbox-wrapper-26 .tick_mark:before,
+.checkbox-wrapper-26 .tick_mark:after {
+	content: "";
+	position: absolute;
+	background-color: #fff;
+	border-radius: 2px;
+	opacity: 0;
+	transition: 0.2s ease transform, 0.2s ease opacity;
+}
 
-  .checkbox-wrapper-26 .tick_mark:before,
-  .checkbox-wrapper-26 .tick_mark:after {
-    content: "";
-    position: absolute;
-    background-color: #fff;
-    border-radius: 2px;
-    opacity: 0;
-    transition: 0.2s ease transform, 0.2s ease opacity;
-  }
+.checkbox-wrapper-26 .tick_mark:before {
+	left: 0;
+	bottom: 0;
+	width: calc(var(--size) * .1);
+	height: calc(var(--size) * .3);
+	box-shadow: -2px 0 5px rgba(0, 0, 0, 0.23);
+	transform: translateY(calc(var(--size) * -.68));
+}
 
-  .checkbox-wrapper-26 .tick_mark:before {
-    left: 0;
-    bottom: 0;
-    width: calc(var(--size) * .1);
-    height: calc(var(--size) * .3);
-    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.23);
-    transform: translateY(calc(var(--size) * -.68));
-  }
+.checkbox-wrapper-26 .tick_mark:after {
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: calc(var(--size) * .1);
+	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.23);
+	transform: translateX(calc(var(--size) * .78));
+}
 
-  .checkbox-wrapper-26 .tick_mark:after {
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: calc(var(--size) * .1);
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.23);
-    transform: translateX(calc(var(--size) * .78));
-  }
+.checkbox-wrapper-26 input[type="checkbox"]:checked + label {
+	background-color: #2186F3;
+	box-shadow: 0 var(--shadow) white;
+}
 
-  .checkbox-wrapper-26 input[type="checkbox"]:checked + label {
-    background-color: #2186F3;
-    box-shadow: 0 var(--shadow) white;
-  }
+.checkbox-wrapper-26 input[type="checkbox"]:checked + label:before {
+	width: 0;
+	height: 0;
+}
 
-  .checkbox-wrapper-26 input[type="checkbox"]:checked + label:before {
-    width: 0;
-    height: 0;
-  }
+.checkbox-wrapper-26 input[type="checkbox"]:checked + label .tick_mark:before,
+.checkbox-wrapper-26 input[type="checkbox"]:checked + label .tick_mark:after {
+	transform: translate(0);
+	opacity: 1;
+}
 
-  .checkbox-wrapper-26 input[type="checkbox"]:checked + label .tick_mark:before,
-  .checkbox-wrapper-26 input[type="checkbox"]:checked + label .tick_mark:after {
-    transform: translate(0);
-    opacity: 1;
-  }
 h1 {
-    text-align: center;
-    margin-bottom: 60px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-top: -116px;
-    font-size: 20px;
-    color: red;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+	text-align: center;
+	margin: -116px 0 60px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-size: 20px;
+	color: red;
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
+
 h2 {
-    /* margin-top: 50px; */
-    position: relative;
-    top: 100px;
-    color: #2196F3;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-    text-transform: uppercase;
-    font-size: 20px;
+	position: relative;
+	top: 100px;
+	color: #2196F3;
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+	text-transform: uppercase;
+	font-size: 20px;
 }
+
 section {
 	text-align: center;
 }
@@ -174,9 +170,8 @@ form {
 	font-size: 18px;
 	border-radius: 5px;
 	cursor: pointer;
-	transition: background-color 0.3s ease;
+	transition: background-color 0.3s ease, transform 0.3s ease;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    /* margin-bottom: 15px; */
 }
 
 .submit-btn:hover {
@@ -187,8 +182,7 @@ form {
 .note {
 	font-size: 16px;
 	color: red;
-	margin-top: 20px;
-    margin-top: 50px;
+	margin-top: 50px;
 }
 
 /* Responsive Styles */
@@ -213,48 +207,46 @@ form {
 	}
 }
 
-
 .loader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #fff;
-  z-index: 1000298298;
-  transition: 1.5s;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: #fff;
+	z-index: 1000298298;
+	transition: 1.5s;
 }
 
 .loader span {
-  color: #2186F3;
-  font-size: 103px;
+	color: #2186F3;
+	font-size: 103px;
 }
 
 .loader-hidden {
-  opacity: 0;
-  visibility: hidden;
+	opacity: 0;
+	visibility: hidden;
 }
 
 .loader::before {
-  content: "";
-  width: 50px;
-  height: 50px;
-  border: 15px solid #ffffff;
-  border-top-color: #2186F3;
-  animation: loading 0.75s ease infinite;
-  border-radius: 50%;
-  margin-right: 40px;
+	content: "";
+	width: 50px;
+	height: 50px;
+	border: 15px solid #ffffff;
+	border-top-color: #2186F3;
+	animation: loading 0.75s ease infinite;
+	border-radius: 50%;
+	margin-right: 40px;
 }
 
 @keyframes loading {
-  from {
-      transform: rotate(0turn);
-  }
-
-  to {
-      transform: rotate(1turn);
-  }
+	from {
+		transform: rotate(0turn);
+	}
+	to {
+		transform: rotate(1turn);
+	}
 }
